--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 	<head>
 		<title>Pauls Site</title>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<meta 
 	</head>
 	<body>
-		<p>Hier kommt was hin</p>
+		<--Navigation bar!-->
+		<ul class="NavBar">
+			<li>Example</li>
+			<li>Example</li>
+			<li>Example</li>
+		</ul>
 	</body>
 </html>
