--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	</head>
 	<body>
-		<--!Navigation bar-->
+		<!--Navigation bar-->
 		<ul class="NavBar">
 			<li>Example</li>
 			<li>Example</li>
